--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,126 @@
-body {
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+body {
+  background-color: rgb(220, 218, 163);
+}
+
+.notes-page {
+  width: 100%;
+  min-height: 100vh;
+  color: black;
+}
+
+.notes-page header {
+  min-height: 100px;
+  max-width: 1920px;
+  margin: 0 auto;
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(72, 69, 69);
+}
+
+.notes-page header .logo {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.notes-page ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 0 15px;
+}
+
+.notes-page header ul li a {
+  text-transform: uppercase;
+  opacity: 0.65;
+}
+
+.notes-page header ul li a:hover {
+  opacity: 1;
+}
+
+.note-page section {
+  width: 100%;
+  box-shadow: 0 0 5px rgb(53, 14, 14);
+  padding: 20px 0;
+}
+
+.note-wrapper {
+  max-width: 1920px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: auto;
+}
+
+.card {
+  width: 300px;
+  box-shadow: 0 0 5px rgb(53, 14, 14);
+  background-color: rgb(208, 202, 202);
+  padding: 10px;
+  position: relative;
+  color: rgb(43, 133, 106);
+  margin: 15px;
+  cursor: pointer;
+}
+
+.card .close {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  font-weight: 900;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.card h4 {
+  margin-right: 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.card .text-wrapper {
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+  margin: 10px 0;
+  color: rgb(41, 40, 40);
+}
+
+.card .date {
+  text-align: right;
+  color: rgb(82, 82, 121);
+}
+
+.card-footer {
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  width: 100%;
+  align-items: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 12px;
+  color: rgb(82, 82, 121);
 }
