--- a/client/src/index.css
+++ b/client/src/index.css
@@ -103,6 +103,9 @@ a {
 .card .text-wrapper {
   width: 100%;
   height: 150px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 7;
   overflow: hidden;
   margin: 10px 0;
   color: rgb(41, 40, 40);
@@ -123,4 +126,56 @@ a {
   letter-spacing: 2px;
   font-size: 12px;
   color: rgb(82, 82, 121);
+}
+
+/* //Create note// */
+
+.create-note {
+  border: 10px solid black;
+  width: 100%;
+  max-width: 500px;
+  margin: auto;
+  padding: 30px;
+}
+
+.create-note h2 {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin: 10px 0;
+}
+
+.create-note .row {
+  width: 100%;
+  margin: 10px 0;
+}
+
+.create-note input,
+.create-note button {
+  width: 100%;
+  padding: 0 5px;
+  height: 40px;
+}
+
+.create-note label {
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 2px;
+}
+
+.create-note textarea {
+  width: 100%;
+  resize: none;
+  padding: 0 5px;
+}
+
+.create-note button {
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+@media (max-width: 500px) {
+  .create-note {
+    padding: 15px;
+    border: 5px solid black;
+  }
 }
